[package]
name = "use-test-assertion"
description = "Primitive assertion metadata for RustUse testing vocabulary."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-test-assertion"
keywords = ["test", "assertion", "metadata", "rustuse"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
