[package]
name = "use-test-expectation"
description = "Expected-vs-actual primitives for RustUse testing vocabulary."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-test-expectation"
keywords = ["test", "expectation", "metadata", "rustuse"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
