[package]
name = "use-test-outcome"
description = "Stable test outcome vocabulary for RustUse testing primitives."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-test-outcome"
keywords = ["test", "outcome", "metadata", "rustuse"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
