[package]
name = "use-test"
description = "Primitive testing vocabulary facade for RustUse."
publish = true
autoexamples = false
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-test"
keywords = ["test", "metadata", "facade", "rustuse"]
categories = ["development-tools", "data-structures"]

[dependencies]
use-test-assertion.workspace = true
use-test-expectation.workspace = true
use-test-case.workspace = true
use-test-suite.workspace = true
use-test-outcome.workspace = true
use-test-status.workspace = true
use-test-fixture.workspace = true
use-test-snapshot.workspace = true
use-test-report.workspace = true

[[test]]
name = "facade"

[[example]]
name = "test_basic_usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
